add physical node layer and planner
Signed-off-by: Lantao Jin <ltjin@amazon.com>